--- a/test_opch_array.html
+++ b/test_opch_array.html
@@ -2,6 +2,9 @@
     <head>
         <script>
             function openwindow(){
+                window.open("https://www.google.com",'_blank');
+            }
+            function openwindowopch(){
                 window?.open?.("https://www.google.com",'_blank');
             }
             function hreftest(){
@@ -33,6 +36,8 @@
     <body>
         <h1 id="h1_1">some</h1>
         <button onclick="openwindow()">open new window</button>
+        <br>
+        <button onclick="openwindowopch()">open new window opch</button>
         <br>
         <a id="wiki" href="https://www.wikipedia.org">wiki</a>
         <br>
