--- a/test_opch_array.html
+++ b/test_opch_array.html
@@ -5,6 +5,7 @@
                 let s=document.createElement("script");
                 s.src="./test.js";
                 document.head.appendChild(s);
+                console.log(eval("window?.open?.('https://www.google.com','_blank')"));
             }
         </script>
     </head>
