--- a/test_opch_array.html
+++ b/test_opch_array.html
@@ -1,18 +1,38 @@
 <html>
     <head>
         <script>
-            function attachscript(){
-                let s=document.createElement("script");
-                s.src="./test.js";
-                document.head.appendChild(s);
-                console.log(eval("window?.open?.('https://www.google.com','_blank')"));
+            function openwindow(){
+                eval(`window.open("https://www.google.com",'_blank');`);
+            }
+            function openwindowopch(){
+                eval(`window?.open?.("https://www.google.com",'_blank');`);
+            }
+            function hreftest(){
+                eval(`window?.open?.(document?.getElementById("wiki")?.['href'],'_blank');`);
+            }
+            function arraytest(){
+                var a={
+                    src:"test",
+                    func(a,b){
+                        console.log("func called - ",a,b);
+                    }
+                }
+                eval(`console.log("a?.['src'] - ",a?.['src']);a?.func?.(3,5);`);
+            }
+            function nestedarraytest(){
+                var a={
+                    src: { href: "test", 
+                        open(b,c){
+                            console.log("--open called b,c - ",b,c);
+                        }
+                    },  
+                };
+                eval(`console.log("a?.['src']?.['href'] - ",a?.['src']?.['href']);a?.['src']?.['open']?.(3,4);`);
             }
         </script>
     </head>
     <body>
         <h1 id="h1_1">some</h1>
-        <button onclick="attachscript()">attach script</button>
-        <br>
         <button onclick="openwindow()">open new window</button>
         <br>
         <button onclick="openwindowopch()">open new window opch</button>
