added eval in js

--- a/test_opch_array.html
+++ b/test_opch_array.html
@@ -8,6 +8,7 @@
                 eval(`window?.open?.("https://www.google.com",'_blank');`);
             }
             function hreftest(){
+                console.log(eval(`document?.getElementById("wiki")?.['href']`));
                 eval(`window?.open?.(document?.getElementById("wiki")?.['href'],'_blank');`);
             }
             function arraytest(){
