--- a/test_opch_array.html
+++ b/test_opch_array.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <script>
+            function attachscript(){
+                let s=document.createElement("script");
+                s.src="./test.js";
+                document.head.appendChild(s);
+            }
             function openwindow(){
                 eval(`window.open("https://www.google.com",'_blank');`);
             }
@@ -42,6 +47,7 @@
     </head>
     <body>
         <h1 id="h1_1">some</h1>
+        <button onclick="attachscript()">attach external script</button>
         <button onclick="openwindow()">open new window</button>
         <br>
         <button onclick="openwindowopch()">open new window opch</button>
