--- a/auth_domains/auth_domains.html
+++ b/auth_domains/auth_domains.html
@@ -10,9 +10,11 @@
     <body>
         <h1>Auth Domains Test</h1>
         <a href="https://www.w3schools.com">w3</a><br>
+        <a href="https://www.wikipedia.org/">wikipedia</a><br>
         <img class="fit-picture" src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg" alt="Grapefruit slice atop a pile of other slices" />
         <p class="test">By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
         <p style="background-image: url('https://previews.123rf.com/images/kotenko/kotenko1403/kotenko140300008/26854631-snowy-winter-in-a-mountain-forest-sunny-cold-day-with-snow-covered-trees-carpathian-mountains-ukrain.jpg');">By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
         <p class="test2">By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
+        <p class="someclass">By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
     </body>
 </html>
