update accounts page

--- a/account_urls/account.html
+++ b/account_urls/account.html
@@ -8,10 +8,11 @@
                 document.body.appendChild(atag);
             }
         </script>
+        <link rel="stylesheet" href="./account.css">
     </head>
     <body>
         <h1>Test Google Account urls</h1>
-        <a href="https://www.w3schools.com">w3</a><br>
+        <a class="testclass" href="https://www.w3schools.com">w3</a><br>
         <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Accounts</a><br>
         <a href="https://accounts.google.com.sg/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Accounts sg</a><br>
         <a href="https://accounts.google.com.de/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">Accounts de</a><br>
