--- a/test_page/test_page.html
+++ b/test_page/test_page.html
@@ -10,7 +10,7 @@
         <script src="https://yogeshtembe.w3spaces.com/scripts2.js"></script>
         <script src="https://yogeshtembe.w3spaces.com/scripts.js"></script>
         <script src="https://yogeshtembe.w3spaces.com/scripts2.js"></script>
-        <link rel="stylesheet" href="./auth_domains.css">
+        <link rel="stylesheet" href="./test_page.css">
     </head>
     <body>
         <h1>Auth Domains Test</h1>
