updated auth domains page

--- a/test_page/test_page.html
+++ b/test_page/test_page.html
@@ -5,18 +5,12 @@
                 background-image: url('https://previews.123rf.com/images/kotenko/kotenko1403/kotenko140300008/26854631-snowy-winter-in-a-mountain-forest-sunny-cold-day-with-snow-covered-trees-carpathian-mountains-ukrain.jpg');
             }
         </style>
-        <script src="https://yogeshtembe.w3spaces.com/scripts.js"></script>
-        <script src="https://yogeshtembe.w3spaces.com/scripts.js"></script>
-        <script src="https://yogeshtembe.w3spaces.com/scripts2.js"></script>
-        <script src="https://yogeshtembe.w3spaces.com/scripts.js"></script>
-        <script src="https://yogeshtembe.w3spaces.com/scripts2.js"></script>
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="./test_page.css">
     </head>
     <body>
         <h1>Auth Domains Test</h1>
-        <script src="https://yogeshtembe.w3spaces.com/scripts.js"></script>
-        <script src="https://yogeshtembe.w3spaces.com/scripts2.js"></script>
-        <script src="https://yogeshtembe.w3spaces.com/scripts2.js"></script>
+        <button onclick="testopen()">open new window</button>
         <a href="https://www.w3schools.com">w3</a><br>
         <a href="https://www.wikipedia.org/">wikipedia</a><br>
         <img class="fit-picture" src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg" alt="Grapefruit slice atop a pile of other slices" />
