added css_test page2

--- a/css_test/css_test.html
+++ b/css_test/css_test.html
@@ -1,9 +1,16 @@
 <html>
     <head>
+        <style>
+            .test{
+                background-image: url('https://media.geeksforgeeks.org/auth-dashboard-uploads/suggestChangeIcon.png');
+            }
+        </style>
         <link rel="stylesheet" href="css_test.css">
     </head>
     <body>
         <h1 class="testclass">CSS Test</h1>
+        <img class="fit-picture" src="https://www.w3schools.com/html/img_girl.jpg"/>
+        <img class="fit-picture" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Activemarker2.PNG/75px-Activemarker2.PNG"/>
         <p class="someclass">By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
     </body>
 </html>
