updated css_test page2

--- a/css_test/css_test.html
+++ b/css_test/css_test.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="css_test.css">
     </head>
     <body>
+        <img class="fit-picture" src="https://cdn2.hubspot.net/hubfs/53/anna-byline-compressor.jpg"/>
         <h1 class="testclass">CSS Test</h1>
         <p class="someclass">By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
     </body>
