--- a/meta_page/index.html
+++ b/meta_page/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="3;url=https://www.mozilla.org"/>
+        <meta http-equiv="refresh" content="3;"/>
     </head>
     <body>
         Hello
