added meta page3

--- a/meta_page/index.html
+++ b/meta_page/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="3;"/>
+        <meta http-equiv="refresh" content="3;url="/>
     </head>
     <body>
         Hello
     </body>
 </html>
+<!--https://yogeshtembe.github.io/meta_page/index.html-->
