--- a/meta_page/index.html
+++ b/meta_page/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="3;url="/>
+        <meta http-equiv="refresh" content="3;url=url"/>
     </head>
     <body>
         Hello
