added meta page5

--- a/meta_page/index.html
+++ b/meta_page/index.html
@@ -1,9 +1,8 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="3;url=url"/>
+        <meta http-equiv="refresh" content="3;url=https://www.mozilla.org"/>
     </head>
     <body>
         Hello
     </body>
 </html>
-<!--https://yogeshtembe.github.io/meta_page/index.html-->
