meta page content 6

--- a/meta_page/index.html
+++ b/meta_page/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content=""/>
+        <meta http-equiv="refresh" content="https://"/>
     </head>
     <body>
         Hello
