meta page content 8

--- a/meta_page/index.html
+++ b/meta_page/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="3; https://yogeshtembe.github.io/meta_page/index.html"/>
+        <meta http-equiv="refresh" content=""/>
     </head>
     <body>
         Hello
