--- a/meta_page/index.html
+++ b/meta_page/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta http-equiv="refresh" content="3; //yogeshtembe.github.io/meta_page/index2.html"/>
+        <meta http-equiv="refresh" content="index2.html"/>
     </head>
     <body>
         Hello
