--- a/script_link_tags/index.html
+++ b/script_link_tags/index.html
@@ -7,8 +7,8 @@
         <script type="module">
             import * as test1 from "https://yogeshtembe.github.io/script_link_tags/test1.js";
             import * as test2 from "https://yogeshtembe.github.io/script_link_tags/test2.js";
-            test1.test1();
-            test2.test2();
+            test1();
+            test2();
         </script>
         <h1>test page</h1>
     </body>
