updated script tag to have query param

--- a/script_link_tags/index.html
+++ b/script_link_tags/index.html
@@ -2,11 +2,11 @@
     <head>
     </head>
     <body>
-        <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test1.js">
+        <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test1.js?a=1">
         <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test2.js" crossorigin="anonymous">
         <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test3.js" crossorigin="use-credentials">
         <script type="module">
-            import * as test1 from "https://yogeshtembe.github.io/script_link_tags/test1.js";
+            import * as test1 from "https://yogeshtembe.github.io/script_link_tags/test1.js?a=1";
             import * as test2 from "https://yogeshtembe.github.io/script_link_tags/test2.js";
             import * as test3 from "https://yogeshtembe.github.io/script_link_tags/test3.js";
             test1.test1();
