updated index file

--- a/script_link_tags/index.html
+++ b/script_link_tags/index.html
@@ -9,9 +9,11 @@
             import * as test1 from "https://yogeshtembe.github.io/script_link_tags/test1.js?a=1";
             import * as test2 from "https://yogeshtembe.github.io/script_link_tags/test2.js";
             import * as test3 from "https://yogeshtembe.github.io/script_link_tags/test3.js";
+            import("https://yogeshtembe.github.io/script_link_tags/test4.js");
             test1.test1();
             test2.test2();
             test3.test3();
+            test4();
         </script>
         <h1>test page</h1>
     </body>
