--- a/script_link_tags/index.html
+++ b/script_link_tags/index.html
@@ -5,6 +5,7 @@
         <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test1.js?a=1">
         <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test2.js" crossorigin="anonymous">
         <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test3.js" crossorigin="use-credentials">
+        <link rel="modulepreload" href="https://yogeshtembe.github.io/script_link_tags/test4.js" crossorigin="anonymous">
         <script type="module">
             import * as test1 from "https://yogeshtembe.github.io/script_link_tags/test1.js?a=1";
             import * as test2 from "https://yogeshtembe.github.io/script_link_tags/test2.js";
@@ -13,7 +14,6 @@
             test1.test1();
             test2.test2();
             test3.test3();
-            test4();
         </script>
         <h1>test page</h1>
     </body>
